2014-05-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* dfu.c (dfu_open, dfu_init): Fix signature of the dummy functions
	(in the !HAVE_LIBUSB case) to match prototypes.

2014-05-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avr910.c: Replace all occurences of exit() in potential library
	functions by appropriate return values
	* avrftdi.c: (Dito.)
	* bitbang.c: (Dito.)
	* bitbang.h: (Dito.)
	* buspirate.c: (Dito.)
	* butterfly.c: (Dito.)
	* config.c: (Dito.)
	* flip2.c: (Dito.)
	* ft245r.c: (Dito.)
	* jtagmkI.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* linuxgpio.c: (Dito.)
	* main.c: (Dito.)
	* par.c: (Dito.)
	* pgm.c: (Dito.)
	* pickit2.c: (Dito.)
	* pindefs.c: (Dito.)
	* pindefs.h: (Dito.)
	* ser_avrdoper.c: (Dito.)
	* ser_posix.c: (Dito.)
	* ser_win32.c: (Dito.)
	* serbb_posix.c: (Dito.)
	* serbb_win32.c: (Dito.)
	* stk500.c: (Dito.)
	* stk500v2.c: (Dito.)

2014-05-07  Rene Liebscher <R.Liebscher@gmx.de>

	bug #42310: New part description for AT90PWM216
	* avrdude.conf.in: added pwm216 entry

2014-05-07  Rene Liebscher <R.Liebscher@gmx.de>

	bug #42158: Linux GPIO - Source Typo
	* pindefs.h: fixed typo

2014-04-14  Rene Liebscher <R.Liebscher@gmx.de>

	bug #42056: double free or corruption triggered at exit
	* pgm.c: copy usbpid list in pgm_dup

2014-04-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.1: Remove the note that users might edit the system-wide
	config file.  This file will be overwritten by the next
	installation, so it's not a good idea to manually modify it.
	Using the -C +file option is a much better way for user
	modifications.
	* doc/avrdude.texi: (Dito.)
	* avrdude.conf.in: Add a warning to not modify the file manually.

2014-03-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version for post-6.1.

2014-03-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to 6.1.

2014-03-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* pgm.c (pgm_free): Cleanup police: destroy the p->usbpid